Add -I option to ignore files and directories matching specified patterns

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # Test binary, built with `go test -c`
 *.test
+*test*
+
+
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -26,3 +29,6 @@ go.work.sum
 
 # Binary file
 treemit
+
+# Text file
+*.txt
