Update baseURL in config.toml to point to the new GitHub Pages site

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,5 +1,5 @@
 # docs/config.toml
-baseURL = "https://example.com/"
+baseURL = "https://Nagaemonn.github.io/treemit/"
 languageCode = "ja"
 title = "treemit"
 
