Add custom CSS for improved typography and update 'getting started' tutorial to reflect changes in file display limits

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -19,6 +19,7 @@ title = "treemit"
       avatar = "img/avatar.png"
       name = "Nagaemonn"
       bio = "Tree-based Commit Message Generator"
+  customCSS = ["custom.css"]
 
 # Theme module configuration
 [module]
