Update GitHub Actions workflow to set Hugo build log level to debug for improved troubleshooting.

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Build
         run: |
           echo "=== Starting Hugo build ==="
-          hugo -s docs -d public --verbose
+          hugo -s docs -d public --logLevel debug
           echo "=== Hugo build completed ==="
 
       - name: Debug - Show build output
