--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -47,34 +47,32 @@ jobs:
       - name: Build
         run: |
           echo "=== Starting Hugo build ==="
-          hugo -s docs -d public --logLevel debug
+          hugo -s docs -d docs/public --logLevel debug
           echo "=== Hugo build completed ==="
-          echo "=== Checking if public directory exists ==="
-          ls -la
-          echo "=== Checking docs directory after build ==="
+          echo "=== Checking if docs/public directory exists ==="
           ls -la docs/
-          echo "=== Checking if public directory was created ==="
-          if [ -d "public" ]; then
-            echo "public directory exists"
-            ls -la public/
+          echo "=== Checking if docs/public directory was created ==="
+          if [ -d "docs/public" ]; then
+            echo "docs/public directory exists"
+            ls -la docs/public/
           else
-            echo "public directory does not exist"
+            echo "docs/public directory does not exist"
             echo "=== Checking for other potential output directories ==="
             find . -name "*.html" -type f | head -10
           fi
 
       - name: Debug - Show build output
         run: |
-          echo "=== Public directory contents ==="
-          ls -la public/
-          echo "=== Public directory size ==="
-          du -sh public/
-          echo "=== Public directory tree (first 3 levels) ==="
-          find public/ -type f | head -20
+          echo "=== Docs/public directory contents ==="
+          ls -la docs/public/
+          echo "=== Docs/public directory size ==="
+          du -sh docs/public/
+          echo "=== Docs/public directory tree (first 3 levels) ==="
+          find docs/public/ -type f | head -20
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: public
+          publish_dir: docs/public
           publish_branch: gh-pages 
