--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,53 +22,14 @@ jobs:
         with:
           hugo-version: 'latest'
 
-      - name: Debug - Show Hugo version
-        run: hugo version
-
-      - name: Debug - Show Hugo config
-        run: |
-          echo "=== Hugo config ==="
-          hugo config -s docs
-          echo "=== Hugo config end ==="
-
-      - name: Debug - Show directory structure before build
-        run: |
-          echo "=== Current directory ==="
-          pwd
-          echo "=== Root directory contents ==="
-          ls -la
-          echo "=== Docs directory contents ==="
-          ls -la docs/
-          echo "=== Docs content directory ==="
-          ls -la docs/content/
-          echo "=== Docs layouts directory ==="
-          ls -la docs/layouts/
-
       - name: Build
-        run: |
-          echo "=== Starting Hugo build ==="
-          hugo -s docs -d public --logLevel debug
-          echo "=== Hugo build completed ==="
-          echo "=== Checking if public directory exists ==="
-          ls -la
-          echo "=== Checking if public directory was created ==="
-          if [ -d "public" ]; then
-            echo "public directory exists"
-            ls -la public/
-          else
-            echo "public directory does not exist"
-            echo "=== Checking for other potential output directories ==="
-            find . -name "*.html" -type f | head -10
-          fi
+        run: hugo -s docs -d public
 
-      - name: Debug - Show build output
+      - name: Show public directory tree
         run: |
-          echo "=== Public directory contents ==="
-          ls -la public/
-          echo "=== Public directory size ==="
-          du -sh public/
-          echo "=== Public directory tree (first 3 levels) ==="
-          find public/ -type f | head -20
+          sudo apt-get update
+          sudo apt-get install -y tree
+          tree -L 3 public || echo "public directory not found"
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
