Add debugging steps to GitHub Actions workflow for Hugo build process, including current directory and file listing before the build command.

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -23,7 +23,10 @@ jobs:
           hugo-version: 'latest'
 
       - name: Build
-        run: hugo -s docs -d public
+        run: |
+          pwd
+          ls -la
+          hugo -s docs -d public
 
       - name: Show public directory tree
         run: |
