Update GitHub Actions workflow to adjust the output directory for Hugo build from ./public to ../public, ensuring correct directory structure for subsequent steps.

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -26,13 +26,13 @@ jobs:
         run: |
           pwd
           ls -la
-          hugo -s docs -d public
+          hugo -s docs -d ../public
 
       - name: Show public directory tree
         run: |
           sudo apt-get update
           sudo apt-get install -y tree
-          tree -L 3 public || echo "public directory not found"
+          tree -L 3 ../public || echo "public directory not found"
 
       - name: Find all HTML files
         run: find . -name "*.html"
