--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -113,3 +113,43 @@ jobs:
         run: |
           just make_distribution_files
           just upload_assets v${{ steps.vars.outputs.tag }}
+
+  docker:
+    needs: publish
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Extract metadata (tags, labels)
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/Nagaemonn/treemit
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
+            type=raw,value=${{ needs.publish.outputs.tag }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout the project
+        uses: actions/checkout@v4
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=ghcr.io/Nagaemonn/treemit:buildcache
+          cache-to: type=registry,ref=ghcr.io/Nagaemonn/treemit:buildcache,mode=max
