--- a/.github/workflows/docker-teest.yaml
+++ b/.github/workflows/docker-teest.yaml
@@ -19,7 +19,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/Nagaemonn/treemit
+          images: ghcr.io/nagaemonn/treemit
           tags: |
             type=raw,value=latest
             type=sha,format=short
@@ -40,5 +40,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/Nagaemonn/treemit:buildcache
-          cache-to: type=registry,ref=ghcr.io/Nagaemonn/treemit:buildcache,mode=max
+          cache-from: type=registry,ref=ghcr.io/nagaemonn/treemit:buildcache
+          cache-to: type=registry,ref=ghcr.io/nagaemonn/treemit:buildcache,mode=max
