--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -116,7 +116,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v'))
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     permissions:
       packages: write
       contents: read
@@ -133,8 +133,7 @@ jobs:
           tags: |
             type=raw,value=latest
             type=sha,format=short
-            # タグpush時のみバージョンタグを付与
-            ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && format('type=raw,value={0}', github.ref_name) || '' }}
+            type=raw,value=${{ github.ref_name }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
