--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -76,7 +76,7 @@ jobs:
 
   publish-tag:
     runs-on: ubuntu-latest
-    # runs only when a tag is pushed
+    needs: publish
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: extractions/setup-just@v3
@@ -129,6 +129,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
+    needs: publish
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     permissions:
       packages: write
